exception emptyObjectException